# llm_crs

./: .env  .pre-commit-config.yaml  Dockerfile.fastapi  Dockerfile.streamlit  README.md  docker-compose.yml  main.py  pyproject.toml  rag_app.db
.github/workflows/: ci.yml
chroma_db/: chroma.sqlite3
data/knowledge_base/arabic/: 10_Rejected(found_it_on_a_discounted price).txt  11_Rejected(Found_it_on_a_discounted price)_2.txt  12_Rejected(Wrong_Number).txt  1_Confirmed_With_Upselling.txt  2_Confirmed_with_Upselling_2.txt  3_Confirmed_with_upselling_3.txt  4_Confirmed_Without_Upselling.txt  5_Handled_After_Rejection(Postpone).txt  6_Rejected(Customer_is_travelling).txt  7_Rejected(Didn_t_Request).txt  8_Rejected(Fake_AD).txt  9_Rejected(Fake_AD)_2.txt
data/knowledge_base/english/: 10_Rejected(found_it_on_a_discounted price).txt  11_Rejected(Found_it_on_a_discounted price)_2.txt  12_Rejected(Wrong_Number).txt  1_Confirmed_With_Upselling.txt  2_Confirmed_with_Upselling_2.txt  3_Confirmed_with_upselling_3.txt  4_Confirmed_Without_Upselling.txt  5_Handled_After_Rejection(Postpone).txt  6_Rejected(Customer_is_travelling).txt  7_Rejected(Didn_t_Request).txt  8_Rejected(Fake_AD).txt  (+1 more)
fastapi_app/: config.py  main.py  rag_app.db
src/audio_processing/: noise_removal.py  transcribe.py  transcribe_gemini.py
src/models/: gemini_api.py  whisper_api.py
src/rag/: chroma_utils.py  db_utils.py  langchain_utils.py  pydantic_models.py  rag.ipynb  rag.py  rag_app.db
src/utils/: path_helpers.py
streamlit_app/: api_utils.py  chat_interface.py  sidebar.py  streamlit_app.py
(+38 files in other folders)
