[project]
name = "llm-crs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "black>=25.1.0",
    "google-genai>=1.5.0",
    "langchain>=0.3.20",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.19",
    "langchain-google-genai>=2.1.0",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.14",
    "noisereduce>=3.0.3",
    "openai>=1.66.3",
    "pandas>=2.2.3",
    "path>=17.1.0",
    "pedalboard>=0.9.16",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
    "soundfile>=0.13.1",
    "streamlit>=1.43.2",
    "unstructured>=0.14.8",
]
